# simplesoilprofile

./: .gitignore  .workflow_test  CONDA_FORGE_SETUP.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: cd.yaml  ci.yaml  docs.yaml  main.yml
conda-recipe/: meta.yaml
docs/: index.md  modules.md
docs/notebooks/: 000-complete-example.ipynb  001-basic-example.ipynb  002-converting-to-pyswap.ipynb  003-layer-discretization.ipynb  index.md
scripts/: update_conda_forge.py
simplesoilprofile/: __init__.py
simplesoilprofile/api/: __init__.py  base.py  config.py  dov.py  geopunt.py
simplesoilprofile/api/configs/: dov.yaml
simplesoilprofile/models/: __init__.py  discretization.py  layer.py  metadata.py  profile.py  swap.py  texture_conversion.py
simplesoilprofile/models/data/: flemish_texture.yaml  usda_texture.yaml
simplesoilprofile/plotting/: __init__.py  profile_plot.py
simplesoilprofile/utils/: __init__.py  logging.py
tests/: test_api.py  test_foo.py  test_models.py  test_plotting.py  test_swap.py
