[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplesoilprofile"
description = "Simple soil profile for hydrological modelling (particularily SWAP)."
keywords = ["soil", "profile", "hydraulic", "properties", "dov", "SWAP"]
version = "0.0.2"
dependencies = [
    "pydantic>=2.4.2",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "pandas>=2.3.3",
    "rosetta-soil>=0.1.2",
    "pydov>=3.3.1",
    "dovwms>=0.0.3",
]
requires-python = ">=3.11"
authors = [
    {name = "Mateusz Zawadzki", email = "zawadzkimat2@gmail.com"}
]
maintainers = []
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE.*"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
"Homepage" = "https://github.com/zawadzkim/simplesoilprofile"
"Repository" = "https://github.com/zawadzkim/simplesoilprofile"
"Documentation" = "https://zawadzkim.github.io/simplesoilprofile/"

[tool.mypy]
files = ["simplesoilprofile"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["simplesoilprofile"]
branch = true

[tool.coverage.paths]
source = ["simplesoilprofile", "*/site-packages/simplesoilprofile"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
pip = "*"
hatchling = "*"

[tool.pixi.pypi-dependencies]
simplesoilprofile = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-mock = "*"
requests-mock = "*"
mypy = "*"
pre-commit = "*"
ipykernel = "*"
nbstripout = "*"
ruff = "*"

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings-python = "*"

[tool.pixi.feature.notebook.dependencies]
jupyter = "*"
ipywidgets = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
notebook = { features = ["notebook"], solve-group = "default" }
full = { features = ["dev", "docs", "notebook"], solve-group = "default" }

[tool.pixi.tasks]
# Testing tasks
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=simplesoilprofile --cov-report=html --cov-report=term"
test-fast = "pytest tests/ -x -v"

# Linting and formatting tasks
lint = "ruff check simplesoilprofile tests"
format = "ruff format simplesoilprofile tests"
format-check = "ruff format --check simplesoilprofile tests"
# typecheck = "mypy simplesoilprofile"

# Documentation tasks
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

# Build tasks
build = "python -m build"
clean = "rm -rf dist/ build/ *.egg-info/ .pytest_cache/ .coverage htmlcov/ .mypy_cache/ .ruff_cache/"

# Notebook tasks
jupyter = "jupyter lab"
notebook-clean = "nbstripout docs/notebooks/*.ipynb"
